--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/desafioDB?autoReconnect=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/desafioDB?autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password=nomeselaclave
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
